--- a/Web/index.html
+++ b/Web/index.html
@@ -36,7 +36,7 @@
           <div class="card-des">
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-            <p class="card-text"> sack BBBOOOIIIII adventue</p>
+            <p class="card-text"> The adventure of Sack boy</p>
             <a href="https://littlebigplanet.playstation.com/littlebigplanet-3-0" class="btn btn-primary">Get this BBBOOOIIIII</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
@@ -58,7 +58,7 @@
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
             <p class="card-text">PLay millions of games made by the commuinty</p>
-            <a href="https://www.roblox.com/NewLogin" class="btn btn-primary"> Get blox and bux</a>
+            <a href="https://www.roblox.com/NewLogin" class="btn btn-primary"> Get roblox</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
           </div>
@@ -79,7 +79,7 @@
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
             <p class="card-text">Do you hear the ticking?</p>
-            <a href="https://www.imdb.com/title/tt2119543/" class="btn btn-primary"> get tick-toking, not the app</a>
+            <a href="https://www.imdb.com/title/tt2119543/" class="btn btn-primary"> get the movie</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
           </div>
@@ -87,7 +87,7 @@
         <div class="card-footer">
           <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-          <small class="text-muted">Directed by Eli Roth</small>
+          <small class="text-muted">Story by John Bellairs</small>
 
           <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
         </div>
@@ -95,14 +95,14 @@
     </div>
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top" src="images/Victoria3.png" alt="Card image cap">
+        <img class="card-img-top" src="images/yum,yum.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 id="cardTitle4" class="card-title"></h5>
           <div class="card-des">
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-            <p class="card-text">Have so yum yums and munch munchs.</p>
-            <a href="https://raesrestaurant.com/menus-and-specials/" class="btn btn-primary"> GET YUMMYS</a>
+            <p class="card-text">For for you and the family.</p>
+            <a href="https://raesrestaurant.com/menus-and-specials/" class="btn btn-primary"> Thier website</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
           </div>
@@ -110,20 +110,20 @@
         <div class="card-footer">
           <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-          <small class="text-muted">idk what to put here.</small>
+          <small class="text-muted">  </small>
 
           <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="images/yep.jpg" alt="Card image cap">
+        <img class="card-img-top" src="images/NotThis.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 id="cardTitle5" class="card-title"></h5>
           <div class="card-des">
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
             <p class="card-text">The worst fruit ninja remake EVER!!!</p>
-            <a href="../p5/studentsY/index.html" class="btn btn-primary"> pls play!</a>
+            <a href="../p5/studentsY/index.html" class="btn btn-primary"> play</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
           </div>
@@ -131,21 +131,20 @@
         <div class="card-footer">
           <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-          <small class="text-muted">Game by me</small>
+          <small class="text-muted">Game by ???</small>
 
           <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="images/Victoria.png" alt="Card image cap">
-        <img class="card-img-top" src="images/Victoria2.png" alt="Card image cap">
+        <img class="card-img-top" src="images/memes.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 id="cardTitle6" class="card-title"></h5>
           <div class="card-des">
             <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-            <p class="card-text">potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato potato.</p>
-            <a href="https://www.google.com/search?rlz=1C1CHBF_enUS797US797&biw=1536&bih=706&tbm=isch&sa=1&ei=6IsuXIqME8PB0PEPl6am8AI&q=potato+memes&oq=potmemes&gs_l=img.3.0.0i7i30l10.5414.5840..7407...0.0..0.78.219.3......0....1..gws-wiz-img.......0i10.S67IjVexG4U" class="btn btn-primary">MEMES!!!!!</a>
+            <p class="card-text">relateible memes.</p>
+            <a href="https://www.google.com/search?hl=en&authuser=0&rlz=1C1CHBF_enUS797US797&biw=1536&bih=706&tbm=isch&sa=1&ei=L8UvXJ2AKJa40PEP-MOEuAg&q=meme+&oq=meme+&gs_l=img.3..35i39j0l9.244585.244585..245556...0.0..0.75.75.1......1....1..gws-wiz-img.7VCXHz5073Y" class="btn btn-primary">page of memes</a>
 
             <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
           </div>
@@ -153,7 +152,7 @@
         <div class="card-footer">
           <!-- ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ -->
 
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <small class="text-muted">Page by google</small>
 
           <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
         </div>
